[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/1x/backward.png" type="Texture" id=1]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/1x/forward.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/components/iterable_button.gd" type="Script" id=3]
[ext_resource path="res://resources/ui/button_focus.tres" type="StyleBox" id=4]
[ext_resource path="res://resources/ui/button_normal.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="iterable_button" type="HBoxContainer"]
margin_right = 678.0
margin_bottom = 60.0
focus_mode = 2
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": "A button that iterates over an array and emits a signal returning the current selected element every time the element is changed.

The list must be a list of dicitonaries containing the \"element\" that will be emitted and the \"name\" that will be displayed."
}
iterable = [ {
"element": 0,
"name": "Godot"
}, {
"element": 1,
"name": "Godette"
} ]

[node name="go_left" type="Button" parent="."]
unique_name_in_owner = true
margin_right = 60.0
margin_bottom = 60.0
focus_mode = 1
custom_styles/focus = SubResource( 2 )
action_mode = 0
icon = ExtResource( 1 )
flat = true

[node name="current_element_label" type="RichTextLabel" parent="."]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 614.0
margin_bottom = 60.0
rect_min_size = Vector2( 550, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
size_flags_horizontal = 4
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]{0}[/center]"
text = "{0}"
scroll_active = false

[node name="go_right" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 618.0
margin_right = 678.0
margin_bottom = 60.0
focus_mode = 1
custom_styles/focus = SubResource( 1 )
action_mode = 0
icon = ExtResource( 2 )
flat = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="go_left" to="." method="_on_go_left_pressed"]
[connection signal="mouse_entered" from="current_element_label" to="." method="_on_current_element_label_mouse_entered"]
[connection signal="mouse_exited" from="current_element_label" to="." method="_on_current_element_label_mouse_exited"]
[connection signal="pressed" from="go_right" to="." method="_on_go_right_pressed"]
